# ai-summit-lab2

./: README.md
api/: main.py  pyproject.toml  start.sh
api/conf/: logging.conf
api/src/: CodeGenManager.py
go-api/: Dockerfile  Makefile  README.md  execute.ash  go.mod  go.sum  main.go  sonar-project.properties
go-api/app/: application.go  application_test.go  cdk.sh
go-api/app/scripts/: cdk.sh  deploy_cdk_app.sh  init_cdk_env.sh
go-api/app/template/: sample_lambda_stack.py
go-api/app/templates/: sample_lambda_stack.py
go-api/aws/: clean_temp_files.sh
go-api/config/: app.yaml  config.go  config_test.go
go-api/docs/: docs.go  swagger.json  swagger.yaml
go-api/logs/: KEEP_ME.txt
go-api/routes/: app.go  healthcheck.go  routes_test.go
go-api/utils/: misc.go  misc_test.go
hello-lambda/: README.md  app.py  requirements.txt
hello-lambda/hello_lambda/: a.py  hello_lambda_stack.py  util.py
hello-lambda/tests/unit/: test_hello_lambda_stack.py
job-run/: README.md  go.mod  go.sum  main.go
job-run/app/: application.go  application_test.go
job-run/app/templates/: sample_lambda_stack.py
job-run/config/: app.yaml  config.go  config_test.go
job-run/utils/: logconf.go  misc.go  misc_test.go
job-submit-api/: docker-compose.yml  main.py  requirements.txt  start.sh
job-submit-api/conf/: logging.conf
job-submit-api/docs/v1/: README.md
job-submit-api/sql/: create_tables.sql
job-submit-api/src/v1/: SessionGenerator.py  __init__.py  const.py  jobProcessor.py
python-api/: README.md
python-api/src/: CodeGenManager.py
